--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <main class="main">
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-      <img src="assets/img/dudud.jpg" alt="Hero background for Shikha Mahesh portfolio" data-aos="fade-in" />
+      <img src="ChatGPT Image Dec 16, 2025, 08_39_21 PM.png" alt="Hero background for Shikha Mahesh portfolio" data-aos="fade-in" />
 
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
